set-up config api